Add flutter_gemini and google_generative_ai dependencies Update play-services-ads dependency to version 23.0.0 Update MinimumOSVersion to 12.0 in AppFrameworkInfo.plist Update add method return type to Future<void> in NewRecipeRepository and NewRecipeService Update search method signature in SearchRepository and SearchService Update LastUpgradeVersion to 1510 in Runner.xcscheme Update add method return type to Future<void> in NewRecipeServiceImpl Update platform :ios to '12.0' in Podfile Add com.google.android.gms.ads.APPLICATION_ID meta-data in AndroidManifest.xml Update search method signature in SearchServiceImpl Update recipe.time to recipe.preparationTime in RecipeWidget Import GoogleMobileAds in AppDelegate.swift

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   get_it: ^7.6.0
   google_sign_in: ^5.4.4
   equatable: ^2.0.5
+  flutter_gemini: ^2.0.3
+  google_generative_ai: ^0.2.2
 
 dev_dependencies:
   flutter_test:
