--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,4 +74,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.android.gms:play-services-ads:23.0.0'
 }
