--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   equatable: ^2.0.5
   flutter_gemini: ^2.0.3
   google_generative_ai: ^0.2.2
+  http: ^1.2.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
