--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   http: ^1.2.1
   shimmer: ^3.0.0
   rive: ^0.13.1
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
