--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -2,9 +2,9 @@ name: Flutter Build
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
 
 jobs:
   build:
